# personal_assistant

./: .gitignore  README.md  addressbook.pkl  main.py  requirements.txt  setup.cfg
src/personal_assistant/: __init__.py  addressbook.py  command_use.py  commands.py  errors.py  fields.py  input_parser.py  notes.py  pickle_data.py  record.py  utils.py
