[metadata]
name = personal-assistant
version = 1.0.0
author = Pythonauts
description = A command-line personal assistant with address book and notes
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/yulikafsd/personal_assistant
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
install_requires =
    prettytable>=3.9
    prompt_toolkit>=3.0
    colorama>=0.4
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    assistant = personal_assistant.main:main
